--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -3,13 +3,13 @@ import { Icon } from "astro-icon";
 import ContentSection from "~/components/content-section.astro";
 ---
 
-<ContentSection title="Just ship less" id="intro">
+<ContentSection title="Atraia mais Clientes" id="intro">
   <Icon slot="eyebrow" name="logomark" class="h-32" />
   <Fragment slot="lead">
-    Astro is a new kind of site builder for the
-    <span class="text-primary">modern</span> web.
-    <span class="text-primary">Lightning-fast</span>
-    performance meets <span class="text-primary">powerful</span> developer experience.
+    Com nossos sites você estará na internet em
+    <span class="text-primary">poucos</span> dias e
+    <span class="text-primary">mais perto dos seus objetivos.</span>
+    Seu site do <span class="text-primary">jeito</span> que você precisa.
   </Fragment>
   <div class="grid grid-cols-1 gap-2 sm:grid-cols-2">
     <a
@@ -17,14 +17,14 @@ import ContentSection from "~/components/content-section.astro";
       class="flex items-center justify-center gap-3 px-6 py-4 border-2 border-current"
     >
       <Icon pack="mdi" name="telescope" class="h-8" />
-      <span>Read the docs</span>
+      <span>Características</span>
     </a>
     <a
       href="https://astro.new/"
       class="flex items-center justify-center gap-3 px-6 py-4 border-2 border-current"
     >
       <Icon pack="mdi" name="rocket" class="h-8" />
-      <span>Try it out</span>
+      <span>Preços</span>
     </a>
   </div>
 </ContentSection>
