--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -17,7 +17,7 @@ import ContentSection from "~/components/content-section.astro";
       class="flex items-center justify-center gap-3 px-6 py-4 border-2 border-current"
     >
       <Icon pack="mdi" name="telescope" class="h-8" />
-      <span>Características</span>
+      <span>Recursos</span>
     </a>
     <a
       href="https://astro.new/"
