--- a/src/components/compatibility.astro
+++ b/src/components/compatibility.astro
@@ -37,9 +37,9 @@ const frameworks = [
 
 const platforms = [
   {
-    title: "Netlify",
-    icon: "platforms/netlify",
-    url: "https://www.netlify.com/",
+    title: "Wordpress",
+    icon: "platforms/wordpress",
+    url: "https://www.wordpress.org",
   },
   {
     title: "Vercel",
@@ -71,17 +71,17 @@ const platforms = [
 
 <ContentSection title="Compatibility" id="compatibility">
   <Fragment slot="lead">
-    Astro <span class="text-primary">plays nice</span>. Bring your own UI{" "}
-    <span class="text-primary">framework</span>
-    and deploy to your favorite <span class="text-primary">platform</span>.
+    A Wise utiliza <span class="text-primary">as melhores tecnologias</span>. Sempre a frente do{" "}
+    <span class="text-primary">mercado</span>
+    em criação e desenvolvimento de <span class="text-primary">sites</span>.
   </Fragment>
   <CompatibilityList
-    title="Frameworks"
+    title="Clientes"
     data={frameworks}
     url="https://docs.astro.build/core-concepts/framework-components/"
   />
   <CompatibilityList
-    title="Platforms"
+    title="Tecnologia"
     data={platforms}
     url="https://docs.astro.build/guides/deploy/"
   />
