--- a/src/components/showcase.astro
+++ b/src/components/showcase.astro
@@ -6,9 +6,9 @@ import sites from "~/data/showcase/sites.json";
 
 <ContentSection title="Showcase" id="showcase">
   <Fragment slot="lead">
-    Astro is <span class="text-primary">versatile</span>.{" "}
-    <span class="text-primary">Explore</span> what's possible and get{" "}
-    <span class="text-primary">inspired</span>.
+    Sites incríveis <span class="text-primary">para seu negócio</span>.{" "}
+    <span class="text-primary">Seu site</span> do jeito que você {" "}
+    <span class="text-primary">precisa</span>.
   </Fragment>
   <div class="max-w-6xl space-y-2">
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3">
@@ -18,7 +18,7 @@ import sites from "~/data/showcase/sites.json";
     </div>
     <p class="text-sm text-right">
       <a class="text-primary" href="https://astro.build/showcase/">
-        ...and more &rarr;
+        ...e muito mais! &rarr;
       </a>
     </p>
   </div>
