--- a/src/components/theme-switcher.astro
+++ b/src/components/theme-switcher.astro
@@ -9,11 +9,11 @@ import { Icon } from "astro-icon";
 >
   <div id="icon-theme-light" class="hidden">
     <Icon name="theme/light" class="h-8" />
-    <span class="sr-only">Use light theme</span>
+    <span class="sr-only">Usar tema claro</span>
   </div>
   <div id="icon-theme-dark" class="hidden">
     <Icon name="theme/dark" class="h-8" />
-    <span class="sr-only">Use dark theme</span>
+    <span class="sr-only">Usar tema escuro</span>
   </div>
 </button>
 
